--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "bootstrap": "^4.5.0",
     "emailjs-com": "^3.2.0",
     "install": "^0.13.0",
-    "next": "10.0.3",
+    "next": "^10.2.3",
     "next-images": "^1.4.0",
     "pspdfkit": "^2021.5.1",
     "react": "^17.0.1",
@@ -27,7 +27,6 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "postinstall": "cp -R ./node_modules/pspdfkit/dist/pspdfkit-lib ./public"
+    "start": "NODE_ENV=production node server.js"
   }
 }
