--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,5 +1,5 @@
 ---
 deployment:
   tasks:
-    - export DEPLOYPATH=/home/woodvnos/public_html/
+    - export DEPLOYPATH=/home/woodvnos/demo2.greenplank.se/
     - /bin/cp * $DEPLOYPATH
