--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-pdf": "^5.3.2",
+    "react-responsive": "^9.0.0-beta.3",
     "react-scroll": "^1.8.0",
     "react-visibility-sensor": "^5.1.1",
     "simple-react-lightbox": "^3.3.4-1",
