--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,10 +1,5 @@
 ---
-# deployment:
-#   tasks:
-#     - export DEPLOYPATH=/home/woodvnos/demo2.greenplank.se/
-#     - /bin/cp * $DEPLOYPATH
-
 deployment:
   tasks:
-    - composer install
-    - /bin/cp -a /home/woodvnos/git/GreenPlankSiteNext/public /home/woodvnos/demo2.greenplank.se/
+    - export DEPLOYPATH=/home/woodvnos/public_html/demo2.greenplank.se
+    - /bin/cp * $DEPLOYPATH
