--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -2,4 +2,4 @@
 deployment:
   tasks:
     - export DEPLOYPATH=/home/woodvnos/public_html/demo2.greenplank.se
-       - /bin/cp -r * $DEPLOYPATH
+       - /bin/cp -R * $DEPLOYPATH
